--- a/translations/admin+intl-icu.fr.yaml
+++ b/translations/admin+intl-icu.fr.yaml
@@ -34,6 +34,7 @@ flash.user.already_verified: Cet utilisateur est déjà vérifié.
 ## Page d'accueil
 page.homepage.title: Page d'accueil de l'administration
 page.homepage.description: La page d'accueil de l'administration pour StackUp.
+page.homepage.welcome: Bienvenue dans le tableau de bord d'administration.
 
 ## User
 ### List
