feat: add form edit/delete/add stack

--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -197,6 +197,10 @@ page.create_tech.add_category: Add a new category
 page.create_tech.add_category.description: Can't find the category you want? Then add a new one!
 page.create_tech.add_category.no_script: Attention. Submitting this form will reload the page as Javascript is not available. Make sure to save your change.
 
+## Create stack
+page.create_stack.title: Create a stack
+page.create_stack.description: Select the attributes of your new stack.
+
 ## Review and publish
 page.review_and_publish.title: Step 3 - Review and Publish
 page.review_and_publish.description: Review your tech before publishing it.
