--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -197,6 +197,10 @@ page.create_tech.add_category: Ajouter une nouvelle catégorie
 page.create_tech.add_category.description: Vous ne trouvez pas la catégorie souhaitée ? Alors ajoutez-en une nouvelle !
 page.create_tech.add_category.no_script: Attention. Soumettre ce formulaire rechargera la page car Javascript n'est pas disponible. Assurez-vous de bien sauvegarder.
 
+## Create stack
+page.create_stack.title: Créer une stack
+page.create_stack.description: Selectionner les attributs de votre nouvelle stack.
+
 ## Review and publish
 page.review_and_publish.title: Étape 3 - Réviser et publier
 page.review_and_publish.description: Passez en revue votre technologie avant de la publier.
