--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -203,7 +203,7 @@ page.create_tech.add_category.no_script: Attention. Submitting this form will re
 page.create_stack.title: Create a stack
 page.create_stack.description: Select the attributes of your new stack.
 
-## Edit Stack 
+## Edit Stack
 page.edit_stack.title: Settings of { name }
 
 ## Review and publish
@@ -279,15 +279,16 @@ tech.link.pkg: Pkg link
 tech.link.pkg.help: 'Eg: https://pkg.go.dev/my-package'
 tech.link.other: Official link
 tech.link.other.help: Should be this tech's official website.
+tech.collection: Techs
+tech.used_by: Used by
+tech.used_by.count: >-
+    { count, plural, =0 {# stack} one {# stack} other {# stacks} }
 
 ## Request
 request.status: Status
 request.status.pending: Pending
 request.status.accepted: Accepted
 request.status.rejected: Rejected
-
-## Tech
-tech.collection: Techs
 
 ## Tech picture
 tech_picture.file: Picture
