--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -246,6 +246,8 @@ reset_password_request.new_password: New password
 reset_password_request.repeat_password: Repeat your password
 
 ## Tech
+tech: Tech
+techs: Techs
 tech.name: Name
 tech.name.help: This name must be unique. It will be used in the tech's URL.
 tech.description: Description
@@ -301,6 +303,8 @@ category.collection: Categories
 category.name.help: A category's name must contain between 2 and 30 characters, using letters and white spaces only.
 
 ## Stack
+stack: Stack
+stacks: Stacks
 stack.techs: Techs
 stack.profile: Owner
 
