Fix: Small style fix

--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -65,6 +65,7 @@ common.more_techs: More techs
 common.new_stack: New stack
 common.new_tech: New tech
 common.stacks: Stacks
+common.author: Author
 
 # Icons
 icon.eye: Show
