--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -65,6 +65,7 @@ common.more_techs: Plus de techs
 common.new_stack: Créer une stack
 common.new_tech: Créer une tech
 common.stacks: Stacks
+common.author: Créateur
 
 # Icons
 icon.eye: Afficher
